Fixed too large table and weird alignment

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -8,13 +8,14 @@ h1
 .controls
     max-width: 800px
 
+.simple-control
+    width: 86px
+
 .ft-table
     width: 100%
     max-width: 800px
+    max-height: 400px
     overflow-y: scroll
-
-.ft-table--open
-    height: 500px
 
 thead
     top: 0
